--- a/my-react-app/.env
+++ b/my-react-app/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8520/api/v1
+VITE_API_URL=http://localhost:8520/api/v1
+VITE_RAZORPAY_KEY_ID=rzp_test_RxlaojKpV5LJ08
